# libredwg

./: Makefile.am  configure.ac
bindings/: Makefile.am
bindings/csharp/: Makefile.am
bindings/cxx/: Makefile.am
examples/: alldwg.inc  alldxf_0.inc  alldxf_2.inc
include/: dwg.h
programs/: dwgwrite.c
src/: Makefile.am  classes.inc  decode.c  decode.h  decode_r2007.c  dwg.c  dwg.spec  in_dxf.c  in_json.c  in_json.h
